--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: Helvetica, sans-serif;
   background-color: #202020;
