--- a/portfolio/scss/portfolio.scss
+++ b/portfolio/scss/portfolio.scss
@@ -6,6 +6,10 @@ $navColor: #202020;
     padding: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: Helvetica, sans-serif;
     //background-color: #101010;
