--- a/portfolio/scss/portfolioDisplay.scss
+++ b/portfolio/scss/portfolioDisplay.scss
@@ -37,6 +37,15 @@
     grid-row: span 2;
 }
 
+.project7 {
+    grid-column: span 3;
+
+    a {
+        display: block;
+        margin-top: 20px;
+    }
+}
+
 
 
 .pic-overlay {
