Updated layout, added projects

--- a/portfolio/css/mediaQueries.css
+++ b/portfolio/css/mediaQueries.css
@@ -1,4 +1,4 @@
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .toggle-button {
     display: flex;
     align-items: center;
@@ -37,6 +37,9 @@
     transform: translate(-50%, -50%);
     text-align: center;
   }
+  .project {
+    min-width: 95vw;
+  }
   .about-flex {
     text-align: center;
   }
@@ -85,25 +88,12 @@
   .resume-skills .skills .fa-git {
     font-size: 100px;
   }
-  .grid-portfolio {
-    min-width: 90%;
-    grid-template-columns: 1fr;
-  }
-  .grid-portfolio .project1 {
-    grid-row: span 1;
-  }
-  .grid-portfolio .project3 {
-    grid-row: span 1;
-  }
-  .grid-portfolio .project4 {
-    grid-row: span 1;
-  }
   footer {
     text-align: center;
     font-weight: bold;
   }
   .pic-overlay .project-desc {
-    font-size: 0.9em;
+    font-size: 0.75em;
   }
 }
 
@@ -114,6 +104,12 @@
     height: 100vh;
     opacity: 0.4;
     position: relative;
+  }
+  .flex-portfolio {
+    min-width: 90vw;
+  }
+  .flex-portfolio .project {
+    min-width: 45%;
   }
   .video-text {
     position: absolute;
@@ -168,22 +164,6 @@
   }
   .resume-skills .skills .fa-git {
     font-size: 110px;
-  }
-  .grid-portfolio {
-    max-width: 60%;
-    grid-template-columns: 1fr;
-  }
-  .grid-portfolio .grid-project {
-    min-width: 100%;
-  }
-  .grid-portfolio .project1 {
-    grid-row: span 1;
-  }
-  .grid-portfolio .project3 {
-    grid-row: span 1;
-  }
-  .grid-portfolio .project4 {
-    grid-row: span 1;
   }
   footer {
     text-align: center;
@@ -233,22 +213,6 @@
   .resume-skills .skills .fa-git {
     font-size: 120px;
   }
-  .grid-portfolio {
-    min-width: 75%;
-    grid-template-columns: 1fr 1fr;
-  }
-  .grid-portfolio .grid-project {
-    min-width: 100%;
-  }
-  .grid-portfolio .project1 {
-    grid-row: span 1;
-  }
-  .grid-portfolio .project3 {
-    grid-row: span 1;
-  }
-  .grid-portfolio .project4 {
-    grid-row: span 1;
-  }
   footer {
     text-align: center;
     font-weight: bold;
@@ -259,22 +223,6 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1370px) {
-  .grid-portfolio {
-    min-width: 75%;
-    grid-template-columns: 1fr 1fr;
-  }
-  .grid-portfolio .grid-project {
-    min-width: 100%;
-  }
-  .grid-portfolio .project1 {
-    grid-row: span 1;
-  }
-  .grid-portfolio .project3 {
-    grid-row: span 1;
-  }
-  .grid-portfolio .project4 {
-    grid-row: span 1;
-  }
   footer {
     text-align: center;
     font-weight: bold;
