--- a/portfolio/scss/portfolioDisplay.scss
+++ b/portfolio/scss/portfolioDisplay.scss
@@ -3,51 +3,33 @@
     letter-spacing: 2px;
     margin: 20px auto;
     text-align: center;
+    text-transform: uppercase;
 }
 
-.grid-portfolio {
-    display: grid;
-    margin: 40px auto 50px auto;
-    max-width: 65vw;    
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-auto-rows: minmax(250px, 450px);
-    grid-gap: 25px;
+.flex-portfolio {
+    max-width: 75vw;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 20px auto 50px auto;
     justify-content: center;
 
-    img {
-        max-width: 100%;
-        min-height: 100%;
-        border: 1px solid #cecece;
+    .project {
+        position: relative;
+        overflow: hidden;
+        max-width: 30%;
+        min-height: 499px;
+        max-height: 500px;
+        margin: 20px auto 20px auto;
+        border: 1px solid #f7f7f7;
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
+
 }
-
-.grid-project:hover {
-    box-shadow: 0px 0px 8px 5px rgba(255,255,255,0.5);
-}
-
-.project1 {
-    grid-row: span 2;
-}
-
-.project3 {
-    grid-row: span 2;
-}
-
-.project4 {
-    grid-row: span 2;
-}
-
-.project7 {
-    grid-column: span 3;
-
-    a {
-        display: block;
-        margin-top: 20px;
-    }
-}
-
-
-
 .pic-overlay {
     opacity: 0;
     transition-property: opacity;
@@ -68,13 +50,13 @@
     h3 {
         margin-bottom: 10px;
         text-transform: uppercase;
-        font-size: 1.5em;
+        font-size: 1.25em;
     }
 
     p {
         padding: 10px;
         margin-bottom: 10px;
-        font-size: 1.25em;
+        font-size: 1em;
     }
 
     .skills-used {
@@ -104,9 +86,4 @@
 
 .pic-overlay:hover {
     opacity: 1;
-}
-
-.grid-project {
-    position: relative;
-    overflow: hidden;
 }
