Updated margins to fix cramped up look and fixed responsive design

--- a/portfolio/css/mediaQueries.css
+++ b/portfolio/css/mediaQueries.css
@@ -47,6 +47,9 @@
     min-width: 100%;
     text-align: center;
   }
+  .about-right {
+    min-width: 100%;
+  }
   .about-right img {
     min-height: 300px;
   }
