--- a/portfolio/scss/portfolioDisplay.scss
+++ b/portfolio/scss/portfolioDisplay.scss
@@ -1,7 +1,11 @@
+#portfolio {
+    padding: 15px;
+}
+
 #portfolio h1 {
     font-family: 'Alegreya Sans', sans-serif;
     letter-spacing: 2px;
-    margin: 20px auto;
+    margin: 25px auto;
     text-align: center;
     text-transform: uppercase;
 }
