--- a/portfolio/scss/portfolio.scss
+++ b/portfolio/scss/portfolio.scss
@@ -178,6 +178,10 @@ body {
     margin: auto;
     padding: 15px;
 
+    h1 {
+        margin-top: 25px;
+    }
+
 
     h1, h3 {
         font-family: 'Alegreya Sans', sans-serif;
